k8s/00-namespace-rbac.yaml
# ============================================================
# k8s/00-namespace-rbac.yaml
# Namespace, ServiceAccount, Role & RoleBinding para TalentoHumano
# ============================================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: talento-humano
  labels:
    app.kubernetes.io/part-of: talento-humano
    environment: production
